--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ img:hover {
 .red { background: #e74c3c; color: white; }
 .blue { background: #3498db; color: white; }
 .green { background: #2ecc71; color: white; }
-.yellow { background: #f1c40f; color: black; }
+.yellow { background: #f1c40f; color: white; }
 
 /* Middle Game Board */
 .board {
