--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,12 @@ body {
     margin-bottom: 40px;
 }
 
+/* flipped card */
+.flipped {
+    background-image: url("../images/Eins Card.png");
+    background-size: 100px 148px;
+}
+
 /* Card Image Styling */
 img {
     width: 100px;
@@ -49,6 +55,22 @@ img:hover {
     font-size: 32px;
     font-weight: bold;
     background: white;
+    cursor: pointer;
+    transition: 0.2s ease;
+    filter: drop-shadow(-3px 4px 5px rgba(0, 0, 0, 0.4));
+}
+
+/* Computer card style */
+.comp-card {
+    width: 100px;
+    height: 148px;
+    border-radius: 12px;
+    border: 3px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    font-weight: bold;
     cursor: pointer;
     transition: 0.2s ease;
     filter: drop-shadow(-3px 4px 5px rgba(0, 0, 0, 0.4));
